# fiap-ml-tech-challenge-4

./: .gitignore  README.md  prometheus.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: prediction.py
app/core/: config.py  containers.py
app/models/: schemas.py
app/services/: data_loader.py  preprocessor.py
data/: lstm_stock_model_fixed.keras  preprocessor.pkl
notebook/: fiap-tc-4-lstm-model-notebook.ipynb
