[project]
name = "stock-prediction-api"
version = "0.1.0"
description = "FastAPI service for Stock Prediction using LSTM"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pandas>=2.2.0",
    "numpy<2.0.0",
    "scikit-learn==1.3.0",
    "tensorflow>=2.15.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "yfinance>=0.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0"
]

[tool.setuptools]
packages = ["app"]
